--- a/PCClubApp.csproj
+++ b/PCClubApp.csproj
@@ -130,6 +130,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemManager\ProfileManager.cs" />
     <Compile Include="SystemManager\SystemController.cs" />
     <Compile Include="SystemManager\UIManager.cs" />
     <Compile Include="Units\Class1.cs" />
@@ -285,8 +286,14 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="SocketIoClientDotNet">
+      <Version>0.9.13</Version>
+    </PackageReference>
     <PackageReference Include="StompClient">
       <Version>0.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="WebSocket4Net">
+      <Version>0.15.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
