--- a/PCClubApp.csproj
+++ b/PCClubApp.csproj
@@ -17,7 +17,17 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <AppxPackageSigningEnabled>false</AppxPackageSigningEnabled>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
+    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+    <PackageCertificateThumbprint>1DF4031B8D1E69FD405260A5F889D9643B3A40F5</PackageCertificateThumbprint>
+    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+    <PackageCertificateKeyFile>
+    </PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -194,7 +204,8 @@
   <ItemGroup>
     <Content Include="Assets\6gr.png" />
     <Content Include="Assets\BrowsersOff.png" />
-    <Content Include="Assets\Clan.png" />
+    <Content Include="Assets\Clan.scale-200.png" />
+    <Content Include="Assets\Clan.scale-400.png" />
     <Content Include="Assets\clock.png" />
     <Content Include="Assets\CloseIcon.png" />
     <Content Include="Assets\exit.png" />
@@ -216,6 +227,7 @@
     <Content Include="Assets\UpLogo.png" />
     <Content Include="Assets\welcome.png" />
     <Content Include="Clan.png" />
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -313,6 +325,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PsevdaData\ShopItems.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="PCClubApp_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
