--- a/PCClubApp.csproj
+++ b/PCClubApp.csproj
@@ -324,6 +324,9 @@
     <PackageReference Include="StompClient">
       <Version>0.1.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Management">
+      <Version>5.0.0</Version>
+    </PackageReference>
     <PackageReference Include="WebSocket4Net">
       <Version>0.15.2</Version>
     </PackageReference>
